adding style to sidebar

--- a/index.html
+++ b/index.html
@@ -5,22 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coimbra Blog</title>
+    <link rel="stylesheet" href="styles/index.css">
 </head>
 
 <body>
     <header>
         <h1>Coimbra Blog</h1>
     </header>
-    <aside>
-        <a href='blog-post.html'>
+    <aside class="sidebar">
+        <a class="link" href='blog-post.html'>
             Coimbra is great
         </a>
-        <a href='blog-post.html'>
+        <a class="link" href='blog-post.html'>
             Around the region
         </a>
-        <a href='blog-post.html'>
+        <a class="link" href='blog-post.html'>
             University
-        </a><a href='blog-post.html'>
+        </a><a class="link" href='blog-post.html'>
             Academica football club </a>
     </aside>
 <main>
