--- a/blog-post.html
+++ b/blog-post.html
@@ -4,23 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coimbra Blog</title>
+    <link rel="stylesheet" href="styles/blog-post.css"> 
 </head>
 <body>
     <header>
-<a href="index.html">
+        
+<a class="link" href="index.html">
  Home
 </a>
 <h1>Coimbra is great</h1>
-<img class="avatar" src="https://avatars1.githubusercontent.com/u/49944258?s=400&u=4f457ef9a7525865130ccad55a9dbaba7d412ff8&v=4">
-<div class="author-name">Joao</div>
+
+<div class="author">
+    <img alt="author" class="avatar" src="https://avatars1.githubusercontent.com/u/49944258?s=400&u=4f457ef9a7525865130ccad55a9dbaba7d412ff8&v=4">
+<div class="author-text">
+    <div class="author-name accent">Joao</div>
 <div class="author-description">Joao is native from Coimbra</div>
+</div>
+</div>
+
 </header>
 <main>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis ea ullam architecto deserunt tempore in neque excepturi vitae unde! Cupiditate, est. Voluptas laborum recusandae facere officia animi eius distinctio qui.</p>
 
-<p class="quote">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab nihil cumque ex perferendis provident distinctio, consequuntur sequi hic nemo reprehenderit odit doloribus dolor recusandae. Facilis iste quibusdam magni numquam voluptates.</p>
+<blockquote class="quote">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab nihil cumque ex perferendis provident distinctio, consequuntur sequi hic nemo reprehenderit odit doloribus dolor recusandae. Facilis iste quibusdam magni numquam voluptates.</blockquote>
 
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cd/Coimbra_e_o_rio_Mondego_%286167200429%29_%28cropped%29.jpg/1920px-Coimbra_e_o_rio_Mondego_%286167200429%29_%28cropped%29.jpg" class="big image">
+<img class="main-image" alt="coimbra city center" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cd/Coimbra_e_o_rio_Mondego_%286167200429%29_%28cropped%29.jpg/1920px-Coimbra_e_o_rio_Mondego_%286167200429%29_%28cropped%29.jpg" class="big image">
 
 <p>
 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus, mollitia aspernatur commodi nulla illum placeat dolorem id minima illo voluptas ad, voluptatibus suscipit porro aut omnis doloremque voluptatum corrupti. Blanditiis?
