--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <a class="link" href='blog-post.html'>
             Coimbra is great
         </a>
-        <a class="link" href='blog-post.html'>
-            Around the region
+        <a class="link" href='https://www.cm-coimbra.pt'>
+         City Hall
         </a>
-        <a class="link" href='blog-post.html'>
+        <a class="link" href='https://www.uc.pt'>
             University
-        </a><a class="link" href='blog-post.html'>
+        </a><a class="link" href='https://www.academica-oaf.pt'>
             Academica football club </a>
     </aside>
 <main>
@@ -29,7 +29,7 @@
   Learn about Coimbra, Portugal.
 
 </div>
-
+<div class="articles">
 <article>
     <h2>
         Coimbra is great
@@ -48,6 +48,8 @@
     </h2>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse, sint iusto adipisci tempore vero consequatur quisquam temporibus reiciendis aliquam, distinctio facere optio quam labore id tempora eum in doloremque quidem.</p>
 </article>
+
+</div>
 
 
 </main>
