added buttons and reformatted

--- a/index.html
+++ b/index.html
@@ -17,46 +17,56 @@
             Coimbra is great
         </a>
         <a class="link" href='https://www.cm-coimbra.pt'>
-         City Hall
+            City Hall
         </a>
         <a class="link" href='https://www.uc.pt'>
             University
-        </a><a class="link" href='https://www.academica-oaf.pt'>
+        </a>
+        <a class="link" href='https://www.academica-oaf.pt'>
             Academica football club </a>
+            <button class="twitter-share-button"
+            onclick="window.location.href='https://twitter.com/intent/tweet';">Share it on Twitter!</button>
+
     </aside>
-<main>
-<div class="description">
-  Learn about Coimbra, Portugal.
+    <main>
+        <div class="description">
+            Learn about Coimbra, Portugal.
 
-</div>
-<div class="articles">
-<article>
-    <h2>
-        Coimbra is great
-    </h2>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse, sint iusto adipisci tempore vero consequatur quisquam temporibus reiciendis aliquam, distinctio facere optio quam labore id tempora eum in doloremque quidem.</p>
-</article>
-<article>
-    <h2>
-        Around the region
-    </h2>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse, sint iusto adipisci tempore vero consequatur quisquam temporibus reiciendis aliquam, distinctio facere optio quam labore id tempora eum in doloremque quidem.</p>
-</article>
-<article>
-    <h2>
-        Academica football club
-    </h2>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse, sint iusto adipisci tempore vero consequatur quisquam temporibus reiciendis aliquam, distinctio facere optio quam labore id tempora eum in doloremque quidem.</p>
-</article>
+        </div>
+        <div class="articles">
+            <article>
+                <h2>
+                    Coimbra is great
+                </h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse, sint iusto adipisci tempore vero
+                    consequatur quisquam temporibus reiciendis aliquam, distinctio facere optio quam labore id tempora
+                    eum in doloremque quidem.</p>
+            </article>
+            <article>
+                <h2>
+                    Around the region
+                </h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse, sint iusto adipisci tempore vero
+                    consequatur quisquam temporibus reiciendis aliquam, distinctio facere optio quam labore id tempora
+                    eum in doloremque quidem.</p>
+            </article>
+            <article>
+                <h2>
+                    Academica football club
+                </h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse, sint iusto adipisci tempore vero
+                    consequatur quisquam temporibus reiciendis aliquam, distinctio facere optio quam labore id tempora
+                    eum in doloremque quidem.</p>
+            </article>
 
-</div>
+        </div>
 
 
-</main>
+    </main>
 
-<footer>
-    Copyright 2021
-</footer>
+    <footer>
+        Copyright 2021
+    </footer>
 
 </body>
 
