--- a/blog-post.html
+++ b/blog-post.html
@@ -18,7 +18,7 @@
     <img alt="author" class="avatar" src="https://avatars1.githubusercontent.com/u/49944258?s=400&u=4f457ef9a7525865130ccad55a9dbaba7d412ff8&v=4">
 <div class="author-text">
     <div class="author-name accent">Joao</div>
-<div class="author-description">Joao is native from Coimbra</div>
+<div class="author-description">Joao is <b>native</b> from <u>Coimbra</u></div>
 </div>
 </div>
 
@@ -28,15 +28,17 @@
 
 <blockquote class="quote">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab nihil cumque ex perferendis provident distinctio, consequuntur sequi hic nemo reprehenderit odit doloribus dolor recusandae. Facilis iste quibusdam magni numquam voluptates.</blockquote>
 
+<figure>
 <img class="main-image" alt="coimbra city center" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cd/Coimbra_e_o_rio_Mondego_%286167200429%29_%28cropped%29.jpg/1920px-Coimbra_e_o_rio_Mondego_%286167200429%29_%28cropped%29.jpg" class="big image">
-
+<figure>Sunny Coimbra</figure>
+</figure>
 <p>
 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus, mollitia aspernatur commodi nulla illum placeat dolorem id minima illo voluptas ad, voluptatibus suscipit porro aut omnis doloremque voluptatum corrupti. Blanditiis?
 </p>
 <h2>History of Coimbra</h2>
 
 <p>
-    Coimbra has the oldest university in <strong>Portugal</strong>
+    Coimbra has the <i>oldest</i> university in <em>Portugal</em>
 </p>
 <ul>
     <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde ut, magnam voluptas dolor praesentium inventore harum, molestias ipsum necessitatibus qui, placeat vitae saepe? Dolorum dolorem libero rerum cum eaque. Esse!</li>
