--- a/blog-post.html
+++ b/blog-post.html
@@ -1,68 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coimbra Blog</title>
-    <link rel="stylesheet" href="styles/blog-post.css"> 
+    <link rel="stylesheet" href="styles/blog-post.css">
 </head>
+
 <body>
     <header>
-        
-<a class="link" href="index.html">
- Home
-</a>
-<h1>Coimbra is great</h1>
 
-<div class="author">
-    <img alt="author" class="avatar" src="https://avatars1.githubusercontent.com/u/49944258?s=400&u=4f457ef9a7525865130ccad55a9dbaba7d412ff8&v=4">
-<div class="author-text">
-    <div class="author-name accent">Joao</div>
-<div class="author-description">Joao is <b>native</b> from <u>Coimbra</u></div>
-</div>
-</div>
+        <a class="link" href="index.html">
+            Home
+        </a>
+        <h1>Coimbra is great</h1>
 
-</header>
-<main>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis ea ullam architecto deserunt tempore in neque excepturi vitae unde! Cupiditate, est. Voluptas laborum recusandae facere officia animi eius distinctio qui.</p>
+        <div class="author">
+            <img alt="author" class="avatar"
+                src="https://avatars1.githubusercontent.com/u/49944258?s=400&u=4f457ef9a7525865130ccad55a9dbaba7d412ff8&v=4">
+            <div class="author-text">
+                <div class="author-name accent">Joao</div>
+                <div class="author-description">Joao is <b>native</b> from <u>Coimbra</u></div>
+            </div>
+        </div>
 
-<blockquote class="quote">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab nihil cumque ex perferendis provident distinctio, consequuntur sequi hic nemo reprehenderit odit doloribus dolor recusandae. Facilis iste quibusdam magni numquam voluptates.</blockquote>
+    </header>
+    <main>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis ea ullam architecto deserunt tempore in neque
+            excepturi vitae unde! Cupiditate, est. Voluptas laborum recusandae facere officia animi eius distinctio qui.
+        </p>
 
-<figure>
-<img class="main-image" alt="coimbra city center" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cd/Coimbra_e_o_rio_Mondego_%286167200429%29_%28cropped%29.jpg/1920px-Coimbra_e_o_rio_Mondego_%286167200429%29_%28cropped%29.jpg" class="big image">
-<figure>Sunny Coimbra</figure>
-</figure>
-<p>
-Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus, mollitia aspernatur commodi nulla illum placeat dolorem id minima illo voluptas ad, voluptatibus suscipit porro aut omnis doloremque voluptatum corrupti. Blanditiis?
-</p>
-<h2>History of Coimbra</h2>
+        <blockquote class="quote">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab nihil cumque ex
+            perferendis provident distinctio, consequuntur sequi hic nemo reprehenderit odit doloribus dolor recusandae.
+            Facilis iste quibusdam magni numquam voluptates.</blockquote>
 
-<p>
-    Coimbra has the <i>oldest</i> university in <em>Portugal</em>
-</p>
-<ul>
-    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde ut, magnam voluptas dolor praesentium inventore harum, molestias ipsum necessitatibus qui, placeat vitae saepe? Dolorum dolorem libero rerum cum eaque. Esse!</li>
-    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est pariatur unde dolore ullam culpa velit odio quas ipsum optio harum hic alias rerum id eligendi laudantium, non aperiam aliquid libero.</li>
-    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores minima doloribus ab debitis laudantium officiis, sunt omnis itaque laboriosam repellat cum, accusantium alias sint earum iusto! Eum consequuntur natus labore?</li>
-</ul>
+        <figure>
+            <img class="main-image" alt="coimbra city center"
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cd/Coimbra_e_o_rio_Mondego_%286167200429%29_%28cropped%29.jpg/1920px-Coimbra_e_o_rio_Mondego_%286167200429%29_%28cropped%29.jpg"
+                class="big image">
+            <figcaption>Sunny Coimbra</figcaption>
+        </figure>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus, mollitia aspernatur commodi nulla illum
+            placeat dolorem id minima illo voluptas ad, voluptatibus suscipit porro aut omnis doloremque voluptatum
+            corrupti. Blanditiis?
+        </p>
+        <h2>History of Coimbra</h2>
 
-<h3>
-    Food in Coimbra
-</h3>
+        <p>
+            Coimbra has the <i>oldest</i> university in <em>Portugal</em>
+        </p>
+        <ul>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde ut, magnam voluptas dolor praesentium
+                inventore harum, molestias ipsum necessitatibus qui, placeat vitae saepe? Dolorum dolorem libero rerum
+                cum eaque. Esse!</li>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est pariatur unde dolore ullam culpa velit
+                odio quas ipsum optio harum hic alias rerum id eligendi laudantium, non aperiam aliquid libero.</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores minima doloribus ab debitis laudantium
+                officiis, sunt omnis itaque laboriosam repellat cum, accusantium alias sint earum iusto! Eum
+                consequuntur natus labore?</li>
+        </ul>
 
-<ol>
-    <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolor praesentium accusamus nihil. Vitae modi laudantium libero nesciunt eum eaque dolores fugit? Voluptatem minus saepe molestiae cumque esse iste quibusdam!</li>
-    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis tenetur consequuntur atque enim, voluptatibus nostrum eligendi quia quam consectetur autem, nemo voluptates asperiores ipsa labore dolores. Doloremque commodi iure voluptatem!</li>
-    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo libero natus, molestiae, laboriosam perferendis minima facilis cupiditate quam tempora nobis officiis totam, odit tempore distinctio quo ipsam ullam consectetur quas.</li>
-</ol>
+        <h3>
+            Food in Coimbra
+        </h3>
 
+        <ol>
+            <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum dolor praesentium accusamus nihil. Vitae
+                modi laudantium libero nesciunt eum eaque dolores fugit? Voluptatem minus saepe molestiae cumque esse
+                iste quibusdam!</li>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis tenetur consequuntur atque enim,
+                voluptatibus nostrum eligendi quia quam consectetur autem, nemo voluptates asperiores ipsa labore
+                dolores. Doloremque commodi iure voluptatem!</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo libero natus, molestiae, laboriosam
+                perferendis minima facilis cupiditate quam tempora nobis officiis totam, odit tempore distinctio quo
+                ipsam ullam consectetur quas.</li>
+        </ol>
+        <section class="social-media">
+            <button class= "share-button" onclick="window.location.href='https://twitter.com/intent/tweet';">Share
+                it on Twitter!</button>
+            <button class="share-button"
+                onclick="window.location.href='https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse';">Share it on
+                facebook!</button>
+            <button class="share-button"
+                onclick="window.location.href='https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fwww.academica-oaf.pt';">Share
+                it on linkedin!</button>
+        </section>
 
-</main>
+    </main>
 
-<footer>
-    Copyright 2021
-</footer>
+    <footer>
+        Copyright 2021
+    </footer>
 
 
 </body>
+
 </html>
